src/test/ui/keyword/keyword-self-as-identifier.rs
fn main() {
    let Self = 22; //~ ERROR cannot find unit struct/variant or constant `Self` in this scope
}
